--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am your Surya, this is my first app.
         </div>
+        <script>
+            alert "i am surya";
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
