[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am your Surya, this is my first app.
         </div>
         <script>
-            alert "i am surya";
+            alert {"i am surya"};
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
